--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ cmake_install.cmake
 *CMakeCache.txt
 *Makefile
 build*/
+_deps/
 
 # C extensions
 # TODO: this might not need ignored for this package
