update location of generated code to match other projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,10 +99,10 @@ foreach(TEST_SOURCE IN ITEMS ${TEST_SOURCES})
     add_executable(${BINARY_NAME} ${TEST_SOURCE})
     target_link_libraries(${BINARY_NAME} PRIVATE sensorycloud)
     target_link_libraries(${BINARY_NAME} PRIVATE Catch2::Catch2)
-    list(APPEND BINARY_NAMES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${BINARY_NAME})
+    list(APPEND TEST_BINARIES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${BINARY_NAME})
 endforeach()
 # Create a combined target to compile all of the test codes
-add_custom_target(tests ALL DEPENDS ${BINARY_NAMES})
+add_custom_target(tests ALL DEPENDS ${TEST_BINARIES})
 
 # --- Benchmarks -------------------------------------------------------------
 
@@ -110,5 +110,27 @@ add_custom_target(tests ALL DEPENDS ${BINARY_NAMES})
 
 # --- Examples ---------------------------------------------------------------
 
-add_executable(hello examples/hello.cpp)
-target_link_libraries(hello PRIVATE sensorycloud)
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+add_executable(hello_cloud examples/hello_cloud.cpp)
+target_link_libraries(hello_cloud PRIVATE sensorycloud)
+
+add_executable(opencv_face_auth examples/opencv/face_auth.cpp)
+target_link_libraries(opencv_face_auth PRIVATE sensorycloud)
+target_link_libraries(opencv_face_auth PRIVATE ${OpenCV_LIBS})
+
+# # Find the source files for the test code to compile iteratively
+# file(GLOB_RECURSE EXAMPLE_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/examples/*.cpp)
+# foreach(EXAMPLE_SOURCE IN ITEMS ${EXAMPLE_SOURCES})
+#     # Convert the path name to an executable name to build.
+#     string(REPLACE "${PROJECT_SOURCE_DIR}/examples/" "example_" BINARY_NAME ${EXAMPLE_SOURCE})
+#     string(REPLACE "/" "_" BINARY_NAME ${BINARY_NAME})
+#     string(REPLACE ".cpp" "" BINARY_NAME ${BINARY_NAME})
+#     # Create the binary and link it with the required libraries
+#     add_executable(${BINARY_NAME} ${EXAMPLE_SOURCE})
+#     target_link_libraries(${BINARY_NAME} PRIVATE sensorycloud)
+#     list(APPEND EXAMPLE_BINARIES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${BINARY_NAME})
+# endforeach()
+# # Create a combined target to compile all of the test codes
+# add_custom_target(examples ALL DEPENDS ${EXAMPLE_BINARIES})
