audio transcription demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -332,6 +332,10 @@ add_executable(portaudio_sound_id examples/portaudio/sound_id.cpp)
 target_link_libraries(portaudio_sound_id PRIVATE sensorycloud)
 target_link_libraries(portaudio_sound_id PRIVATE portaudio)
 
+add_executable(portaudio_transcribe examples/portaudio/transcribe.cpp)
+target_link_libraries(portaudio_transcribe PRIVATE sensorycloud)
+target_link_libraries(portaudio_transcribe PRIVATE portaudio)
+
 add_executable(paex_record examples/portaudio/paex_record.c)
 target_link_libraries(paex_record PRIVATE portaudio)
 
