asynchronous callback pattern for audio enrollment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -398,6 +398,10 @@ add_executable(portaudio_biometric_enroll examples/portaudio/biometric_enroll.cp
 target_link_libraries(portaudio_biometric_enroll PRIVATE sensorycloud)
 target_link_libraries(portaudio_biometric_enroll PRIVATE portaudio)
 
+add_executable(portaudio_biometric_enroll_callback examples/portaudio/biometric_enroll_callback.cpp)
+target_link_libraries(portaudio_biometric_enroll_callback PRIVATE sensorycloud)
+target_link_libraries(portaudio_biometric_enroll_callback PRIVATE portaudio)
+
 add_executable(portaudio_biometric_authenticate examples/portaudio/biometric_authenticate.cpp)
 target_link_libraries(portaudio_biometric_authenticate PRIVATE sensorycloud)
 target_link_libraries(portaudio_biometric_authenticate PRIVATE portaudio)
