implement dr_wav transcription application for uploading WAV files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -414,9 +414,13 @@ target_link_libraries(portaudio_biometric_authenticate_callback PRIVATE portaudi
 
 
 
-add_executable(dr_wav_transcribe_callback examples/dr_wav/transcribe_callback.cpp examples/dr_wav/dr_wav.h)
+add_executable(dr_wav_transcribe_callback
+    examples/dr_wav/transcribe_callback.cpp
+    examples/dr_wav/dr_wav.h
+    examples/dr_wav/audio_buffer.hpp
+    examples/dr_wav/tqdm.hpp
+)
 target_link_libraries(dr_wav_transcribe_callback PRIVATE sensorycloud)
-target_link_libraries(dr_wav_transcribe_callback PRIVATE portaudio)
 
 
 
