--- a/Dockerfile.Ubuntu.18.04
+++ b/Dockerfile.Ubuntu.18.04
@@ -44,7 +44,13 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git libssl-dev
+RUN apt-get install -y build-essential autoconf libtool pkg-config git libssl-dev
+# Install the latest version of CMake.
+RUN apt-get install -y software-properties-common wget
+RUN wget -qO - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add -
+RUN apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
+RUN apt-get update
+RUN apt-get -y install cmake
 
 # ----------------------------------------------------------------------------
 # MARK: Source Files
