--- a/Dockerfile.Ubuntu.18.04
+++ b/Dockerfile.Ubuntu.18.04
@@ -46,11 +46,19 @@ RUN apt-get -y upgrade
 # Install dependencies for the SDK.
 RUN apt-get install -y build-essential autoconf libtool pkg-config git libssl-dev
 # Install the latest version of CMake.
-RUN apt-get install -y software-properties-common wget
-RUN wget -qO - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add -
-RUN apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
+# RUN apt-get install -y software-properties-common wget
+# RUN wget -qO - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add -
+# RUN apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
+# RUN apt-get update
+# RUN apt-get -y install cmake
+
+# Install the latest version of CMake. This is based on the official CMake
+# documentation for Ubuntu 18.04 here: https://apt.kitware.com/
+RUN apt-get install -y gpg wget
+RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
+RUN echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ bionic main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
 RUN apt-get update
-RUN apt-get -y install cmake
+RUN apt-get install -y cmake
 
 # ----------------------------------------------------------------------------
 # MARK: Source Files
